<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ExtraText">

    <EditText
        android:id="@+id/etSurname"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/roundcolor"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/et_Surname"
        android:inputType="textPersonName"
        android:padding="8dp"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/etRpassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFirstName" />

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="308dp"
        android:layout_height="72dp"
        android:text="@string/tv_Register_Title"
        android:textAllCaps="false"
        android:textSize="55sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/etEmail"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/roundcolor"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/groupSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etConfirmPasswordord" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/buttonshape"
        android:text="@string/btn_Register"
        android:textAllCaps="false"
        android:textColor="@android:drawable/screen_background_light"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupSpinner" />

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/roundcolor"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/et_First_Name"
        android:inputType="textPersonName"
        android:padding="8dp"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/etSurname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRegister" />


    <Spinner
        android:id="@+id/groupSpinner"
        android:layout_width="280dp"
        android:layout_height="38dp"
        android:animateLayoutChanges="false"
        android:background="@drawable/roundcolor"
        android:dropDownWidth="match_parent"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:hint="Group"
        android:persistentDrawingCache="animation"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/btnRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/etRpassword"
        android:layout_width="280dp"
        android:layout_height="38dp"
        android:layout_alignParentStart="false"
        android:layout_alignParentLeft="false"
        android:background="@drawable/roundcolor"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/etConfirmPasswordord"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSurname"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:layout_width="280dp"
            android:layout_height="38dp"
            android:background="@drawable/roundcolor"
            android:baselineAligned="true"
            android:ems="10"
            android:gravity="center_horizontal|center_vertical"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="15sp" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/etConfirmPasswordord"
        android:layout_width="280dp"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/roundcolor"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/etEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRpassword"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:background="@drawable/roundcolor"
            android:gravity="center_vertical|center_horizontal"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textIsSelectable="false"
            android:textSize="15sp" />
    </android.support.design.widget.TextInputLayout>

    <![CDATA[

    android:inputType="textPersonName"
    android:textSize="15sp"
    app:layout_constraintBottom_toTopOf="@+id/btnRegister"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/etEmail"
    app:layout_constraintVertical_bias="0.468" />

]]>
</android.support.constraint.ConstraintLayout>